@@ -66,6 +66,7 @@
       <component class="dev">
         <requires eq="mingwrt-%-mingw32-dll.tar" />
         <requires eq="wsl-features-*-mingw32-cfg.tar" />
+        <release tarname="mingwrt-5.3.3-mingw32-dev.tar.xz" />
         <release tarname="mingwrt-5.3.2-mingw32-dev.tar.xz" />
         <release tarname="mingwrt-5.3.1-mingw32-dev.tar.xz" />
         <release tarname="mingwrt-5.3-mingw32-dev.tar.xz" />
@@ -79,6 +80,7 @@
       </component>
 
       <component class="dll">
+        <release tarname="mingwrt-5.3.3-mingw32-dll.tar.xz" />
         <release tarname="mingwrt-5.3.2-mingw32-dll.tar.xz" />
         <release tarname="mingwrt-5.3.1-mingw32-dll.tar.xz" />
         <release tarname="mingwrt-5.3-mingw32-dll.tar.xz" />
@@ -92,6 +94,7 @@
       </component>
 
       <component class="lic">
+        <release tarname="mingwrt-5.3.3-mingw32-lic.tar.xz" />
         <release tarname="mingwrt-5.3.2-mingw32-lic.tar.xz" />
         <release tarname="mingwrt-5.3.1-mingw32-lic.tar.xz" />
         <release tarname="mingwrt-5.3-mingw32-lic.tar.xz" />
@@ -105,6 +108,7 @@
       </component>
 
       <component class="man">
+        <release tarname="mingwrt-5.3.3-mingw32-man.tar.xz" />
         <release tarname="mingwrt-5.3.2-mingw32-man.tar.xz" />
         <release tarname="mingwrt-5.3.1-mingw32-man.tar.xz" />
         <release tarname="mingwrt-5.3-mingw32-man.tar.xz" />
@@ -137,6 +141,9 @@
 
       <component class="dev">
         <requires eq="mingwrt-%-mingw32-dev.tar" />
+        <release tarname="libmingwex-5.3.3-mingw32-dev.tar.xz">
+          <requires eq="libmingwex-%-mingw32-dll-2.tar" />
+        </release>
         <release tarname="libmingwex-5.3.2-mingw32-dev.tar.xz">
           <requires eq="libmingwex-%-mingw32-dll-3.tar" />
         </release>
@@ -170,6 +177,7 @@
       </component>
 
       <component class="dll">
+        <release tarname="libmingwex-5.3.3-mingw32-dll-2.tar.xz" />
         <release tarname="libmingwex-5.3.2-mingw32-dll-3.tar.xz" />
         <release tarname="libmingwex-5.3.1-mingw32-dll-2.tar.xz" />
         <release tarname="libmingwex-5.3-mingw32-dll-2.tar.xz" />
@@ -202,6 +210,7 @@
       <licence tarname="mingwrt-%-mingw32-lic.tar.%" />
 
       <component class="dev">
+        <release tarname="w32api-5.3.3-mingw32-dev.tar.xz" />
         <release tarname="w32api-5.3.2-mingw32-dev.tar.xz" />
         <release tarname="w32api-5.3.1-mingw32-dev.tar.xz" />
         <release tarname="w32api-5.3-mingw32-dev.tar.xz" />
